option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('kconfig', type: 'array', value: [])
option('aarch64_backend', type: 'combo',
    choices: ['auto', 'c', 'threaded'], value: 'auto',
    description: 'AArch64 客体执行后端')

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)
option('core_only', type: 'boolean', value: false)
